# polycash

./: .dccache  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  authentication.go  block.go  block_hash.go  block_hash_test.go  block_reward_test.go  block_test.go  blockchain.go  blockchain.json  blockchain_test.go  blockutil.go  blockutil_test.go  bootstrap.go  build.sh  cmdline.go  constants.go  contracts.go  create_block.go  create_block_test.go  difficulty.go  encryption.go  encryption_test.go  env.json  go.mod  go.sum  install.sh  key_encoding.go  key_encoding_test.go  legacy_testnet_blockchain.json  legacy_testnet_env.json  logging.go  logging_test.go  main.go  merkle_test.go  mine.go  (+16 more)
analysis/: cmdline.go  token.go  tps.go
contracts/: Cargo.toml  assembly.md  blockutil.blockasm  buf.blockasm  bytecode.md  jump.blockasm  logic.blockasm  math.blockasm  perf.data  perf.data.old  shift.blockasm  tx.blockasm
contracts/examples/: blockchain_len.blockasm  fn.blockasm  invoke.blockasm  logging.blockasm  math.blockasm  oracle.blockasm  read_state.blockasm  read_tx.blockasm  sender.blockasm  slice.blockasm  state.blockasm  write_state.blockasm
contracts/src/: blockutil.rs  buffer.rs  lib.rs  main.rs  math.rs  merkle.rs  msgpack.rs  read_contract.rs  sanitization.rs  stack.rs  state.rs  syntax_tree.rs  vm.rs
contracts/tests/: buffer_test.rs  syntax_tree_test.rs  vm_test.rs
docs/: architecture.md  setup.md  vm.md  welcome.md
gui_wallet/: Cargo.toml
language/: CMakeLists.txt  counter.poly  out.blockasm  test.pcon  test.pl  test.poly
language/src/: BlockasmGenerator.cpp  BlockasmGenerator.h  BlockasmLib.cpp  BlockasmLib.h  Compiler.cpp  Compiler.h  ControlModule.cpp  ControlModule.hpp  ExpressionBlockasmGenerator.cpp  ExpressionBlockasmGenerator.h  Function.h  InjectedFunction.h  LabelManager.cpp  LabelManager.h  Linker.cpp  Linker.h  Operator.h  OperatorType.h  ParamsParser.cpp  ParamsParser.h  Parser.cpp  Parser.h  RegisteredFunctionInfo.h  Signature.cpp  Signature.h  SystemFunction.h  SystemFunctions.h  Token.h  TokenType.h  Type.h  Variable.h  main.cpp  memory.md
language/src/blockasm_lib/: format.blockasm  string.blockasm
node_interface/: cmdline.go
node_util/: authentication.go  benchmark.go  block.go  block_hash.go  block_reward.go  blockchain.go  (+25 more)
vm_zk/host/: Cargo.toml
vm_zk/host/src/: lazy_vector.rs  main.rs  prove.rs  request_handler.rs  socket.rs  verify.rs
vm_zk/methods/guest/: Cargo.toml
vm_zk/methods/guest/src/: lazy_vector.rs  main.rs  merkle_state.rs  ptr_wrapper_state.rs  zk_blockutil.rs
(+31 files in other folders)
