[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rustc-hash = "2.0.0"
smartstring = "1.0.1"
sha2 = "0.10.8"
rmpv = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
panic = "abort"
strip = "symbols"
lto = "fat"
