[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
contracts = { path = "../../contracts" }
bincode = "1.3.3"
zk_common = { path = "../zk_common" }
rustc-hash = "2.0.0"
rmp-serde = "1.3.0"
hex = "0.4.3"