[package]
name = "polycash_zk_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
contracts = { path = "../../../contracts" }
smartstring = "1.0.1"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
zk_common = { path = "../../zk_common" }
rustc-hash = "2.0.0"
hex = "0.4.3"